--- a/src/flavors/willamette/config.yml
+++ b/src/flavors/willamette/config.yml
@@ -189,22 +189,9 @@ sidebar:
   slug: filter-type
   # Layers are defined in the "map config" section
   panels:
-    legend:
-      title: _(Citizen Reports:)
-      items:
-        - title: _(Observations)
-          image: /static/css/images/markers/marker-observation.png
-          url: /filter/observation
-        - title: _(Ideas)
-          image: /static/css/images/markers/marker-idea.png
-          url: /filter/idea
-        - title: _(Questions)
-          image: /static/css/images/markers/marker-question.png
-          url: /filter/question
-        - title: _(Complaints)
-          image: /static/css/images/markers/marker-complaint.png
-          url: /filter/complaint
-    gis_layers:
+    - id: gis-layers
+      icon: list
+      view: GISLegendView
       title: _(Map Layers:)
       groupings:
         - id: grp-community
@@ -221,8 +208,30 @@ sidebar:
               title: _(Source control status)
               visibleDefault: true
 
-    ticker:
+    - id: ticker
+      view: ActivityView
+      icon: comments-o
+      activity: true
       title: _(Activity Stream:)
+
+    - id: reports_legend
+      title: _(Citizen Reports:)
+      view: LegendView
+      icon: info-circle
+      title: _(Citizen Reports:)
+      items:
+        - title: _(Observations)
+          image: /static/css/images/markers/marker-observation.png
+          url: /filter/observation
+        - title: _(Ideas)
+          image: /static/css/images/markers/marker-idea.png
+          url: /filter/idea
+        - title: _(Questions)
+          image: /static/css/images/markers/marker-question.png
+          url: /filter/question
+        - title: _(Complaints)
+          image: /static/css/images/markers/marker-complaint.png
+          url: /filter/complaint
 
 activity:
   # Optional. Activity is supported by default. Set to false to disable.
