--- a/src/flavors/duwamish-watershed/config.yml
+++ b/src/flavors/duwamish-watershed/config.yml
@@ -208,6 +208,126 @@ place_types:
         icon:
           iconUrl: /static/css/images/markers/marker-rec.png
 
+  observation:
+    label: _(Observation)
+    rules:
+      - condition: '{{layer.focused}} === true'
+        icon:
+          iconUrl: /static/css/images/markers/marker-observation.png
+          shadowUrl: /static/css/images/marker-shadow.png
+          iconSize: [50, 60]
+          iconAnchor: [25, 60]
+          shadowSize: [50, 60]
+          shadowAnchor: [14, 60]
+
+      - condition: '{{map.zoom}} < 11'
+        icon:
+          iconUrl: /static/css/images/markers/dot-0d85e9.png
+          iconSize: [10, 12]
+          iconAnchor: [5, 12]
+
+      - condition: '{{map.zoom}} < 16'
+        icon:
+          iconUrl: /static/css/images/markers/marker-observation.png
+          iconSize: [15, 18]
+          iconAnchor: [7.5, 18]
+
+      - condition: '{{map.zoom}} >= 16'
+        icon:
+          iconUrl: /static/css/images/markers/marker-observation.png
+          iconSize: [38, 46]
+          iconAnchor: [19, 46]
+
+  question:
+    label: _(Question)
+    rules:
+      - condition: '{{layer.focused}} === true'
+        icon:
+          iconUrl: /static/css/images/markers/marker-question.png
+          shadowUrl: /static/css/images/marker-shadow.png
+          iconSize: [50, 60]
+          iconAnchor: [25, 60]
+          shadowSize: [50, 60]
+          shadowAnchor: [14, 60]
+
+      - condition: '{{map.zoom}} < 11'
+        icon:
+          iconUrl: /static/css/images/markers/dot-dbcf2c.png
+          iconSize: [10, 12]
+          iconAnchor: [5, 12]
+
+      - condition: '{{map.zoom}} < 16'
+        icon:
+          iconUrl: /static/css/images/markers/marker-question.png
+          iconSize: [15, 18]
+          iconAnchor: [7.5, 18]
+
+      - condition: '{{map.zoom}} >= 16'
+        icon:
+          iconUrl: /static/css/images/markers/marker-question.png
+          iconSize: [38, 46]
+          iconAnchor: [19, 46]
+
+  idea:
+    label: _(Idea)
+    rules:
+      - condition: '{{layer.focused}} === true'
+        icon:
+          iconUrl: /static/css/images/markers/marker-idea.png
+          shadowUrl: /static/css/images/marker-shadow.png
+          iconSize: [50, 60]
+          iconAnchor: [25, 60]
+          shadowSize: [50, 60]
+          shadowAnchor: [14, 60]
+
+      - condition: '{{map.zoom}} < 11'
+        icon:
+          iconUrl: /static/css/images/markers/dot-f95016.png
+          iconSize: [10, 12]
+          iconAnchor: [5, 12]
+
+      - condition: '{{map.zoom}} < 16'
+        icon:
+          iconUrl: /static/css/images/markers/marker-idea.png
+          iconSize: [15, 18]
+          iconAnchor: [7.5, 18]
+
+      - condition: '{{map.zoom}} >= 16'
+        icon:
+          iconUrl: /static/css/images/markers/marker-idea.png
+          iconSize: [38, 46]
+          iconAnchor: [19, 46]
+
+  complaint:
+    label: _(Complaint)
+    rules:
+      - condition: '{{layer.focused}} === true'
+        icon:
+          iconUrl: /static/css/images/markers/marker-complaint.png
+          shadowUrl: /static/css/images/marker-shadow.png
+          iconSize: [50, 60]
+          iconAnchor: [25, 60]
+          shadowSize: [50, 60]
+          shadowAnchor: [14, 60]
+
+      - condition: '{{map.zoom}} < 11'
+        icon:
+          iconUrl: /static/css/images/markers/marker-complaint.png
+          iconSize: [10, 12]
+          iconAnchor: [5, 12]
+
+      - condition: '{{map.zoom}} < 16'
+        icon:
+          iconUrl: /static/css/images/markers/marker-complaint.png
+          iconSize: [15, 18]
+          iconAnchor: [7.5, 18]
+
+      - condition: '{{map.zoom}} >= 16'
+        icon:
+          iconUrl: /static/css/images/markers/marker-complaint.png
+          iconSize: [38, 46]
+          iconAnchor: [19, 46]
+
 # Sidebar and activity stream should be enabled and disabled together!
 # note: sidebar is aka 'MasterLegend'
 # TODO: Couple the sidebar and activity stream because the activity stream is a component of the sidebar
