--- a/src/flavors/snoqualmie/config.yml
+++ b/src/flavors/snoqualmie/config.yml
@@ -1,9 +1,9 @@
 # Settings for the app
 app:
   # HTML Title
-  title: Snoqalmie trails
+  title: Snoqualmie trails
   # Header name
-  name: "Snoqalmie trails"
+  name: "Snoqualmie trails"
   # Meta description that will show up in Google search results
   meta_description: "_(Welcome! We are a community of residents and stakeholders who are monitoring the cleanup of toxic waste in Seattle's Duwamish River.)"
   # Meta author that will show up in Google search results
