add trees and air places to green-duwamish flavor

--- a/src/flavors/duwamish-watershed/config.yml
+++ b/src/flavors/duwamish-watershed/config.yml
@@ -66,6 +66,18 @@ map:
       type: cartodb
 
   # Legend Layers
+    - id: duwamish
+      type: place
+      slug: report
+
+    - id: trees
+      type: place
+      slug: trees
+
+    - id: air
+      type: place
+      slug: air
+
     - id: restoration
       url: https://k7b7dyc4v3.execute-api.us-west-2.amazonaws.com/production/getLandmarks
       sources:
@@ -330,6 +342,43 @@ place_types:
           iconSize: [38, 46]
           iconAnchor: [19, 46]
 
+  air_watch:
+    label: _(Air Watch)
+    rules:
+      - condition: '{{layer.focused}} === true'
+        icon:
+          iconUrl: /static/css/images/markers/marker-greenwall.png
+          shadowUrl: /static/css/images/marker-shadow.png
+          iconSize: [50, 60]
+          iconAnchor: [25, 60]
+          shadowSize: [50, 60]
+          shadowAnchor: [14, 60]
+
+      - condition: '{{map.zoom}} < 11'
+        icon:
+          iconUrl: /static/css/images/markers/marker-greenwall.png
+          iconSize: [10, 12]
+          iconAnchor: [5, 12]
+
+      - condition: '{{map.zoom}} < 17'
+        icon:
+          iconUrl: /static/css/images/markers/marker-greenwall.png
+          iconSize: [18, 21.75]
+          iconAnchor: [9, 21.75]
+
+      - condition: '{{map.zoom}} >= 17'
+        icon:
+          iconUrl: /static/css/images/markers/marker-greenwall.png
+          iconSize: [38, 46]
+          iconAnchor: [19, 46]
+
+  tree:
+    zoomType: mapboxZoomStyle
+    rules:
+      - condition: 'true'
+        icon:
+          iconUrl: /static/css/images/markers/marker-tree.png 
+
 # Sidebar and activity stream should be enabled and disabled together!
 # note: sidebar is aka 'MasterLegend'
 # TODO: Couple the sidebar and activity stream because the activity stream is a component of the sidebar
@@ -411,6 +460,16 @@ sidebar:
             - id: restoration
               title: _(Restoration Sites)
               description: _(Habitat restoration and other improvements)
+              visibleDefault: true
+
+            - id: air
+              title: _(Air Watch Reports)
+              description: _(Air quality reports)
+              visibleDefault: true
+
+            - id: trees
+              title: _(Trees)
+              description: _(New trees)
               visibleDefault: true
 
         - id: grp-history
@@ -519,6 +578,12 @@ place:
   submit_button_label: _(Put it on the map!)
 
   location_item_name: location
+
+  categories:
+    tree:
+      name: location_type
+    air_watch:
+      name: location_type
 
   items:
     - prompt: _(Type of report)
