make green seattle partnership layer visible by default

--- a/src/flavors/duwamish_flavor/config.yml
+++ b/src/flavors/duwamish_flavor/config.yml
@@ -512,7 +512,7 @@ sidebar:
               # Green Seattle Partnership restoration phases
             - id: phases
               title: _(Green Seattle partnership)
-              visibleDefault: false
+              visibleDefault: true
 
               # Noxious Weeds
             - id: noxious-weeds
