--- a/src/flavors/waterfront/config.yml
+++ b/src/flavors/waterfront/config.yml
@@ -84,6 +84,10 @@ map:
       title: _(Original river path)
       visibleDefault: false
 
+    - id: waterfront
+      type: place
+      slug: report
+
 # The keys show up in the dropdown list when you are adding a new place
 # The values map the place type to map icons (defined below).
 place_types:
@@ -319,6 +323,118 @@ place:
   submit_button_label: _(Submit)
 
   location_item_name: location
+
+  #### begin dynamic form config ####
+  categories:
+    observation:
+      name: location_type
+      dataset: waterfront
+      datasetSlug: report
+      icon_url: /static/css/images/markers/marker-observation.png
+      value: observation
+      label: _(Observation)
+      fields:
+        - name: title
+          type: text
+          prompt: _(Title of your observation:)
+          display_prompt: _(Title:)
+          placeholder: _(Enter title...)
+          optional: false
+        - name: description
+          type: textarea
+          prompt: _(Description of this observation:)
+          display_prompt: _(Further description:)
+          placeholder: _(Enter description...)
+          optional: false
+    question:
+      name: location_type
+      dataset: waterfront
+      datasetSlug: report
+      icon_url: /static/css/images/markers/marker-question.png
+      value: question
+      label: _(Question)
+      fields:
+        - name: title
+          type: text
+          prompt: _(Title of your question:)
+          display_prompt: _(Title:)
+          placeholder: _(Enter title...)
+          optional: false
+        - name: description
+          type: textarea
+          prompt: "_(What's your question?)"
+          display_prompt: _(My question:)
+          placeholder: _(Enter question...)
+    idea:
+      name: location_type
+      dataset: waterfront
+      datasetSlug: report
+      icon_url: /static/css/images/markers/marker-idea.png
+      value: idea
+      label: _(Idea)
+      fields:
+        - name: title
+          type: text
+          prompt: _(Title of your idea:)
+          placeholder: _(Enter title...)
+          display_prompt: _(Title:)
+          optional: false
+        - name: description
+          type: textarea
+          prompt: _(Describe your idea below:)
+          display_prompt: "_(Here's my idea:)"
+          placeholder: _(Description...)
+          optional: false
+    complaint:
+      name: location_type
+      dataset: waterfront
+      datasetSlug: report
+      icon_url: /static/css/images/markers/marker-complaint.png
+      value: complaint
+      label: _(Complaint)
+      fields:
+        - name: title
+          type: text
+          prompt: _(Title of your complaint:)
+          placeholder: _(Enter title...)
+          display_prompt: _(Title:)
+          optional: false
+        - name: description
+          type: textarea
+          prompt: "_(What's your complaint?)"
+          display_prompt: _(I have the following complaint:)
+          placeholder: _(Description...)
+          optional: false
+
+  # define form elements that appear on every form here
+  common_form_elements:
+    - name: submitter_name
+      type: text
+      prompt: _(Your name)
+      placeholder: _(Name)
+      optional: true
+    - name: private-submitter_email
+      type: text
+      prompt: _(Your Email)
+      optional: true
+      sticky: true
+      attrs:
+        - key: placeholder
+          value: _(Receive email updates on your report)
+        - key: size
+          value: 30
+    - name: my_image
+      type: file
+      prompt: _(Image)
+      inputfile_label: _(Add an Image)
+      optional: true
+      attrs:
+        - key: accept
+          value: image/*
+    - type: submit
+      label: _(Put it on the map!)
+
+  #### end dynamic form config ####
 
   items:
     - prompt: _(Type of report)
