--- a/src/flavors/snoqualmie/config.yml
+++ b/src/flavors/snoqualmie/config.yml
@@ -59,9 +59,17 @@ map:
       type: cartodb
 
   # Legend Layers
-    - id: trails
-      url: https://smartercleanup.cartodb.com/api/v2/viz/497022e6-0654-11e6-91e1-0e5db1731f59/viz.json
+    - id: potential-connections
+      url: https://nebughey.cartodb.com/api/v2/viz/3901f1f4-1e01-11e6-a9f3-0ef7f98ade21/viz.json
       type: cartodb
+
+    - id: existing-trails
+      url: https://nebughey.cartodb.com/api/v2/viz/df1a5586-1e06-11e6-bb26-0e3a376473ab/viz.json
+      type: cartodb
+
+    - id: planned-trails
+      url: https://nebughey.cartodb.com/api/v2/viz/5285be1a-1e08-11e6-8061-0ef24382571b/viz.json
+      type: cartodb      
 
     - id: uga
       url: https://smartercleanup.cartodb.com/api/v2/viz/d33eff70-0bee-11e6-97dd-0e787de82d45/viz.json
@@ -244,14 +252,25 @@ sidebar:
           title: _(Community Data)
           visibleDefault: true
           layers:
-            - id: trails
-              title: _(Trails)
-              description: _(Information on current trails, upcoming trails, and proposed trails)
+
+            - id: existing-trails
+              title: _(Existing trails)
+              description: _(Existing trails)
+              visibleDefault: true
+
+            - id: planned-trails
+              title: _(Planned trails)
+              description: _(Existing trails)
+              visibleDefault: true
+
+            - id: potential-connections
+              title: _(Potential connections)
+              description: _(Potential connections)
               visibleDefault: true
 
             - id: reports
               title: _(Community Reports)
-              description: _(Reports added to the map by citizens)
+              description: _(Reports added to the map by residents)
               visibleDefault: true
 
             - id: uga
