add ability to include landmark detail views in story navigation

--- a/src/flavors/duwamish_flavor/config.yml
+++ b/src/flavors/duwamish_flavor/config.yml
@@ -1062,9 +1062,9 @@ story:
       tagline: _(You found a map story!)
       order: 
         - trees/298
-        - trees/248
+        - lucile-bridge
         - trees/244
-        - trees/245
+        - lucile-and-holgate
 
 
 
