--- a/src/flavors/duwamish_flavor/config.yml
+++ b/src/flavors/duwamish_flavor/config.yml
@@ -1069,9 +1069,9 @@ story:
       tagline: _(You found a map story!)
       order: 
         - trees/298
-        - trees/248
+        - lucile-bridge
         - trees/244
-        - trees/245
+        - lucile-and-holgate
 
 
 
